--- a/workshops/week-08/nextjs-playground/src/app/globals.css
+++ b/workshops/week-08/nextjs-playground/src/app/globals.css
@@ -1,11 +1,19 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* CSS variables - store values to improve reusablity*/
+  --background-colour: #501523;
+  --font-colour: #black;
+  --accent-colour: #ff1d16;
+  --link-colour: #097458;
 }
 
-@theme inline {
+/* Tailwind themes is a custom default set of values that we can use as part of the other Tailwin utility classes */
+@theme {
+  --color-blue-500: #00ffff;
+}
+
+/* @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -17,10 +25,10 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: var(--background-colour);
+  color: var(--font-colour);
   font-family: Arial, Helvetica, sans-serif;
 }
